<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/pizza"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_pizza" tools:context=".Pizza">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sabor"
        android:id="@+id/txtSabor"
        style="@style/Textos"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtSabor">
    <requestFocus/>
    </EditText>
    <TextView
        android:id="@+id/txtTamanho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tamanho"
        style="@style/Textos"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtTamanho"/>
    <TextView
        android:id="@+id/txtQuantidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantidade"
        style="@style/Textos"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtQuantidade"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pedido"
        android:id="@+id/btnInserirPedido"
        style="@style/Botao1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listar"
        android:id="@+id/btnListarPedido"
        style="@style/Botao2"
        android:layout_gravity="right" />
    </FrameLayout>

</LinearLayout>
