<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/row">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:text="@string/sabor"
                android:layout_marginRight="10dp"/>
            <TextView
                android:id="@+id/txtSabor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/tamanho"
                android:layout_marginRight="10dp"/>
            <TextView
                android:id="@+id/txtTamanho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/quantidade"
                android:layout_marginRight="10dp"/>
            <TextView
                android:id="@+id/txtQuantidade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </TableRow>
    </TableLayout>

</LinearLayout>
